# Trickplay

./: .bash_profile  .gitignore  .gitmodules  .todo  CMakeLists.txt  DEPRECATIONS TODO.txt  Makefile  README.md  TrickPlay.sublime-project  clutter-host.cpp  clutter-stage.cpp  clutter-stage.h  clutter-timeline.cpp  clutter-timeline.h  cmake_options_script.py  lua_test.cpp  test.lua  test2.lua  test3.lua  trickplay-host.cpp  util.cmake
clients/clutter-mediaplayer/: CMakeLists.txt  audio.c  main.c
clients/jpeg-utils-test/: CMakeLists.txt  main.cpp
clients/lirc/: CMakeLists.txt  main.c
engine/: .astylerc  CMakeLists.txt  timer_new.cpp
engine/bindings/: app.lb  apps.lb  audiosampler.lb  bitmap.lb  canvas.lb  clutter.lb  clutter_actor.lb  clutter_alpha.lb  clutter_animation.lb  clutter_animator.lb  clutter_canvas.lb  clutter_clone.lb  clutter_constraint.lb  clutter_container.lb  clutter_grid_layout.lb  clutter_group.lb  clutter_image.lb  clutter_interval.lb  clutter_path.lb  clutter_rectangle.lb  clutter_score.lb  clutter_screen.lb  clutter_state.lb  clutter_table_layout.lb  clutter_text.lb  clutter_timeline.lb  controller.lb  controllers.lb  devtools.lb  ease.lb  editor.lb  fft.lb  gameservice.lb  globals.lb  http.lb  idle.lb  json.lb  key_codes.txt  keyboard.lb  local_hash.lb  (+28 more)
engine/clutter_alpha_mode/: CMakeLists.txt  clutter_alpha_mode.c  clutter_alpha_mode.h
engine/docs/: CMakeLists.txt  expand-subsections.js
engine/docs/apps/nd/: .gitignore  Languages.txt  Menu.txt  Menu.txt.src  Topics.txt  Trickplay.css
engine/docs/apps/text/: getting_started.txt  key_codes.txt
engine/docs/devtools/: overview_tools.txt
engine/docs/devtools/editor/: introduction.txt
engine/docs/devtools/ide/: introduction.txt
engine/docs/devtools/misc/: stitcher.txt
engine/docs/editor/nd/: Languages.txt  Menu.txt  Menu.txt.src  Trickplay.css
engine/docs/editor/text/: editor.txt  sdk_editor.txt
engine/docs/internal/: TrickPlaySDK.odt  Trickplay New Platform Bring-up Checklist.odt  controller-protocol.txt
engine/docs/internal/config/: Menu.txt  MenuSaved.txt
engine/docs/internal/misc/: TrickPlaySDK.docx  Trickplay New Platform Bring-up Checklist.docx  controller-protocol.txt  iOS CommandInterpreter AdvancedUI.odt  iOS TakeControl Framework Source File Org.odt  iOS TakeControlApp Source File Org.odt  iOS VideoStreamer Framework Source File Org.odt
engine/docs/internal/text/: introduction.txt  lua_binding.txt
engine/docs/nd/: Languages.txt  Menu.txt  Topics.txt  Trickplay.css
engine/docs/nd/Data/: ClassHierarchy.nd  ConfigFileInfo.nd  FileInfo.nd  IndexInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
engine/docs/oem/config/: Menu.txt  Trickplay.css
engine/docs/oem/nd/: Menu.txt  Trickplay.css
engine/docs/oem/text/: introduction.txt  plugin.txt
engine/docs/rte/: DocEntrance.txt
engine/docs/rte/config/: .gitignore  Languages.txt  Menu.txt.src  Topics.txt  Trickplay.css
engine/docs/rte/progguide/: app_metafile.txt  color_names.txt  color_specs.txt  color_table_for_insertion.html  config_keys.txt  (+11 more)
engine/docs/text/: getting_started.txt  user_interface.txt
engine/lb/include/: lb.h
engine/lb/src/: lb.c  lb.cpp
engine/libgameservice/: CMakeLists.txt  accountinfo.h  game.cc  game.h  gameservice_interface.h  gameserviceclient.cc  gameserviceclient.h  item.h  joinmatchrequest.h  json_parser.c  json_parser.h  libgameservice.cc  libgameservice.h  matchdata.h  matchrequest.h  matchstate.h  participant.h  presenceouttask.cc  presenceouttask.h  presencepushtask.cc  presencepushtask.h  receivetask.cc  receivetask.h  registeraccounttask.cc  registeraccounttask.h  role.h  status.cc  status.h  turn.h  userdata.h  usergamedata.h  xmppconnecttask.cc  xmppconnecttask.h  xmppengineimpl_register.cc  xmppengineimpl_register.h  xmppengineimpl_register_iq.cc  xmppmugconstants.cc  xmppmugconstants.h  xmpppump.cc  xmpppump.h  (+6 more)
engine/lua/: CMakeLists.txt
engine/lua/lua-5.2.0/: p1.patch  p2.patch  p3.patch
engine/public/include/: lauxlib.h  lua.h  luaconf.h  lualib.h
engine/source/: actions.cpp  actions.h  ansi_color.h  api_request_handler.cpp  api_request_handler.h  app.cpp  app.h  app_push_server.cpp  app_push_server.h  app_resource.cpp  app_resource.h  app_resource_request_handler.cpp  app_resource_request_handler.h  audio_sampling.cpp  audio_sampling.h  bitmap.cpp  bitmap.h  callback_holder.cpp  callback_holder.h  clutter_util.cpp  clutter_util.h  common.h  console.cpp  console.h  console_commands.cpp  console_commands.h  context.cpp  context.h  controller_delegates.cpp  controller_delegates.h  controller_discovery_mdns.cpp  controller_discovery_mdns.h  controller_discovery_mdns.mm  controller_discovery_upnp.cpp  controller_discovery_upnp.h  controller_lirc.cpp  controller_lirc.h  controller_list.cpp  controller_list.h  controller_server.cpp  (+100 more)
engine/source/libgameservice/: game.cc  gameserviceclient.cc  gameserviceclient.h  libgameservice.h  matchstate.h  presencepushtask.cc  receivetask.cc  receivetask.h  turn.h  xmppmugconstants.h  xmpppump.cc  xmpptasks.cc  xmpptasks.h
engine/source/osx/: osx-cursor-glue.h  osx-cursor-glue.m
pdk/: CMakeLists.txt  opensource-list.csv  opensource-list.xls
plugins/audio-detection/audible-magic/: CMakeLists.txt  main.cpp  tp_audio_detection-audible_magic.config
sdk/: CMakeLists.txt  changelog  trickplay-debugger  trickplay-debugger.desktop  trickplay-editor  trickplay-editor-docs.desktop  trickplay-editor.desktop  trickplay-example.cfg  trickplay.1.pod  trickplay.desktop
test/: CMakeLists.txt  FindCairo.cmake  FindClutter.cmake  FindGTK2.cmake  FindPango.cmake  app.lb  clutter.lb  context.cpp  context.h  globals.lb  local_hash.lb  main.c  main.cpp  network.cpp  network.h  storage.cpp  storage.h  storage.lb  timer.lb  tp.h  tp.lua  url_request.lb
test/examples/: flickr_photo_wall.lua
tools/stitcher/: CMakeLists.txt  Makefile  item.c  item.h  layout.c  layout.h  leaf.c  leaf.h  main.c  main.h  options.c  options.h  output.c  output.h  progress.c  progress.h  state.c  state.h  stitcher  stitcher.1  stitcher.man
(+3822 files in other folders)
